--- a/Package.json
+++ b/Package.json
@@ -1,15 +1,18 @@
 {
-  "name": "college-notifier",
+  "name": "academiapro-backend",
   "version": "1.0.0",
+  "description": "Backend server for AcademiaPro website to handle Gemini API calls.",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.14.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "@google/generative-ai": "^0.5.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
+
