--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,17 +1,19 @@
 {
   "name": "academiapro-backend",
   "version": "1.0.0",
-  "description": "Backend server for AcademiaPro website to handle Gemini API calls.",
+  "description": "Backend for AcademiaPro with Gemini API integration",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "Your Name",
-  "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.14.1",
+    "@google/generative-ai": "^0.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
