--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "academiapro-backend",
+  "name": "gemini-flash-backend",
   "version": "1.0.0",
-  "description": "Backend for AcademiaPro with Gemini API integration",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
