--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "gemini-flash-backend",
+  "name": "academiapro-backend",
   "version": "1.0.0",
+  "description": "Backend for AcademiaPro with Gemini 2.0 Flash API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
