--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "academiapro-backend",
   "version": "1.0.0",
-  "description": "Backend for AcademiaPro with Gemini 2.0 Flash API",
+  "description": "Backend for AcademiaPro using OpenRouter (fallback Gemini)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,12 +11,23 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.34.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": [
+    "nodejs",
+    "express",
+    "openrouter",
+    "gemini",
+    "assignment-ai",
+    "backend"
+  ],
+  "author": "Sahil Codab",
+  "license": "MIT"
 }
