--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "academiapro-backend",
   "version": "1.0.0",
-  "description": "Backend for AcademiaPro using OpenRouter (fallback Gemini)",
+  "description": "Backend for AcademiaPro using OpenRouter (fallback Gemini) + PDF Generator with Watermark",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "openai": "^4.34.1"
+    "openai": "^4.34.1",
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -26,7 +27,10 @@
     "openrouter",
     "gemini",
     "assignment-ai",
-    "backend"
+    "backend",
+    "pdf",
+    "puppeteer",
+    "watermark"
   ],
   "author": "Sahil Codab",
   "license": "MIT"
