--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "openai": "^4.34.1",
-    "puppeteer": "^22.0.0"
+    "puppeteer-core": "^22.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -27,10 +28,9 @@
     "openrouter",
     "gemini",
     "assignment-ai",
-    "backend",
     "pdf",
-    "puppeteer",
-    "watermark"
+    "puppeteer-core",
+    "chrome-aws-lambda"
   ],
   "author": "Sahil Codab",
   "license": "MIT"
