--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "openai": "^4.34.1",
-    "puppeteer-core": "^22.0.0"
+    "puppeteer-core": "10.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
