--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
+  "overrides": {
+    "puppeteer-core": "10.1.0"
+  },
   "engines": {
     "node": ">=18.0.0"
   },
