--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,12 @@
     "pdf",
     "puppeteer-core",
     "chrome-aws-lambda"
+    {
+  "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^10.1.0"
+  }
+}
   ],
   "author": "Sahil Codab",
   "license": "MIT"
