--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "academiapro-backend",
   "version": "1.0.0",
-  "description": "Backend for AcademiaPro using OpenRouter (fallback Gemini) + PDF Generator with Watermark",
+  "description": "Backend for AcademiaPro AI Assistant with OpenRouter/Gemini integration and PDF generation",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -14,24 +15,31 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "openai": "^4.34.1",
-    "puppeteer-core": "^10.1.0"
+    "puppeteer-core": "^21.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "keywords": [
-    "nodejs",
-    "express",
+    "academic",
+    "ai",
+    "assignment-generator",
     "openrouter",
     "gemini",
-    "assignment-ai",
-    "pdf",
-    "puppeteer-core",
-    "chrome-aws-lambda"
+    "pdf-generation",
+    "education"
   ],
-  "author": "Sahil Codab",
-  "license": "MIT"
+  "author": "Your Name",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/academiapro-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/academiapro-backend/issues"
+  }
 }
