--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,45 +1,18 @@
 {
   "name": "academiapro-backend",
   "version": "1.0.0",
-  "description": "Backend for AcademiaPro AI Assistant with OpenRouter/Gemini integration and PDF generation",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "openai": "^4.34.1",
-    "puppeteer-core": "^21.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "pdfkit": "^0.13.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "keywords": [
-    "academic",
-    "ai",
-    "assignment-generator",
-    "openrouter",
-    "gemini",
-    "pdf-generation",
-    "education"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/academiapro-backend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/academiapro-backend/issues"
+    "node": ">=18.0.0"
   }
 }
