--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "academiapro-backend",
+  "name": "ai-assignment-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "A backend server to generate assignments using OpenRouter and Gemini, and create PDFs.",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "author": "Sahil",
+  "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "pdfkit": "^0.13.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.52.2",
+    "pdfkit": "^0.15.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
